Dev: Build the first scanner

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,5 +1,5 @@
 # Simple meson build for the kncc executable
 
-executable('kncc', 'main.c',
+executable('kncc', ['main.c', 'scan.c'],
   install: true
 )
