Dev: Build a basic AST parser

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,5 +1,5 @@
 # Simple meson build for the kncc executable
 
-executable('kncc', ['main.c', 'scan.c'],
+executable('kncc', ['main.c', 'scan.c', 'expr.c', 'tree.c', 'interpret.c'],
   install: true
 )
