Feat: Add statement parsing and keyword support

--- a/src/meson.build
+++ b/src/meson.build
@@ -6,7 +6,9 @@ executable('kncc', [
     'gen.c',
     'interpret.c',
     'main.c',
+    'misc.c',
     'scan.c',
+    'stmt.c',
     'tree.c'
   ],
   install: true
